<resources>
    <string name="app_name">WeTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_group_settings">Edit Group</string>
    <string name="title_app_settings">App Settings</string>
    <string name="Login">Login</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_add_group">Add Group</string>
    <string name="nav_logout">Logout</string>

    <string name="group_name">Default Group</string>

    <string name="tab_text_1">My Tasks</string>
    <string name="tab_text_2">All Tasks</string>
    <string name="tab_text_3">Archive</string>

    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="submit">SUBMIT</string>
    <string name="complete">COMPLETE</string>
    <string name="not_complete">NOT COMPLETE YET</string>
    <string name="delete">DELETE</string>

    <string name="comments">Comments:</string>
    <string name="assigned_to">Assigned To:</string>
    <string name="assigned_by">Assigned By:</string>
    <string name="last_edited">Last Edited:</string>
    <string name="deadline">Deadline:</string>
    <string name="date_completed">Date Completed:</string>
    <string name="task_title_goes_here">TITLE</string>
    <string name="confirm">CONFIRM</string>
    <string name="sample_date">--/--/--</string>
    <string name="create_group">CREATE</string>
    <string name="edit_group_name">Group Name</string>
    <string name="add_user">Add a User (Limit 8)</string>
    <string name="enter_user">Type Username</string>
    <string name="add_comments">Add Comments</string>
    <string name="add_title">Enter Title</string>
    <string name="default_title">No Title</string>
    <string name="not_assigned">Not Assigned</string>

    <string name="Wireless_and_network">Wireless + Network</string>
    <string name="Wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="data_usage">Data Usage</string>
    <string name="more">More</string>
    <string name="device">Device</string>
    <string name="display">Display</string>
    <string name="sound">Sound + Notification</string>
    <string name="apps">Apps</string>

    <string name="confirm_complete_title">Complete task?</string>
    <string name="confirm_delete_title">Delete task?</string>
    <string name="confirm_delete_message">This action cannot be undone.</string>
    <string name="error">Error</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="leave">LEAVE GROUP</string>
</resources>
