<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#26E8A7"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/taskTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_goes_here"
        android:paddingStart="16dp"/>

    <TextView
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="129dp" />

    <TextView
        android:id="@+id/deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="157dp" />

    <TextView
        android:id="@+id/assignedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assigned_by"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/assignedTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assigned_to"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="230dp" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        app:layout_constraintTop_toBottomOf="@+id/assignedTo"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/complete"
        android:layout_width="300dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/complete"
        android:text="@string/complete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/comments" />

    <ImageView
        android:id="@+id/deleteTask"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/baseline_delete_black_18dp"/>
    <!--TODO: Change this to be an ImageButton when the functions are developed -->

    <ImageView
        android:id="@+id/editTask"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/baseline_edit_black_18dp"/>
    <!--TODO: Change this to be an ImageButton when the functions are developed -->
</LinearLayout>