<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/default_title"
        android:textSize="24sp"></TextView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="75"
        android:gravity="right"
        android:orientation="vertical">

        <TextView
            android:id="@+id/assigned_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/not_assigned"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/sample_date"
            android:textSize="18sp"></TextView>
    </LinearLayout>

</LinearLayout>